test/npm/es6/openfl/errors/EOFErrorTest.js
import EOFError from "openfl/errors/EOFError";
import * as assert from "assert";


describe ("ES6 | EOFError", function () {
	
	
	it ("test", function () {
		
		// TODO: Confirm functionality
		
		var eofError = new EOFError ();
		assert.notEqual (eofError, null);
		
	});
	
	
});